Fix SystemHandlerTest (part 2)